# solar_twin

./: .gitignore  CLAUDE.md  README.md  SESSIONS.md  plan.md  pyproject.toml
configs/: farm.yaml  mission.yaml  mission_cosmos.yaml  mission_edge.yaml
configs/scenarios/: hard_shadow.yaml  hard_shadow_angled.yaml  sweeping_shadow.yaml
docs/: DIGITAL_TWIN_VISION_AND_RESEARCH.md  ENVIRONMENT.md  PROJECT_BIBLE.md  ROS2_CONTRACT.md  STACK.md  TASKS.md  solar-inspection-digital-twin-plan.md
docs/specs/: 01-scope-and-vision.md  02-requirements.md  03-architecture.md  04-interfaces-and-data.md  05-hazard-and-safety.md  06-scenario-suite-and-kpis.md  07-roadmap-and-milestones.md  08-platform-and-risk-register.md  README.md
src/solar_twin/: run.py  scenario.py
src/solar_twin/control/: base.py  kinematic.py  kinematic_math.py  safe.py
src/solar_twin/orchestrator/: fake_backend.py  mission.py
src/solar_twin/perception/: base.py  cosmos_reason.py  ground_truth.py
src/solar_twin/schema/: pv_module.py
src/solar_twin/transport/: base.py  sim_native.py
src/solar_twin/world/: farm_builder.py  keepout.py  layout.py  sim_runtime.py
tests/: test_cosmos_reason.py  test_farm_builder_usd.py  test_fault_report.py  test_keepout.py  test_kinematic.py  test_kinematic_math.py  test_layout.py  test_mission.py  test_perception_ground_truth.py  test_scenario.py  test_schema.py  test_schema_usd.py
tools/: day1_ros2_camera_check.py  install_ros2_jazzy.sh
