[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "solar-twin"
version = "0.1.0"
description = "Autonomous solar-farm inspection digital twin (Slice 0 spine)"
requires-python = ">=3.10"
# Pure-python deps only. Isaac Sim, pxr/usd, and ROS 2 are provided by the
# Isaac Sim bundled Python at runtime and are intentionally NOT listed here —
# the Brain half must import and test without them (see CLAUDE.md golden rules).
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
